--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://koyaboy.github.io/intro-section-with-dropdown-navigation-main",
+  "homepage": ".",
   "name": "intro-section-with-dropdown-navigation-main",
   "version": "0.1.0",
   "private": true,
@@ -14,8 +14,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
